--- a/styles/style.css
+++ b/styles/style.css
@@ -58,3 +58,7 @@ font-family: 'Poppins', sans-serif;*/
     line-height: 27px;
     padding: 15px 30px;
   }
+  .btn-branding:hover{
+    color: #272142;
+    background: var(--branding-color);
+  }
