--- a/styles/style.css
+++ b/styles/style.css
@@ -11,12 +11,7 @@ font-family: 'Poppins', sans-serif;*/
     font-family: var(--default-font-family);
   }
   
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
+  h1, h2, h3, h4, h5, h6 {
     color: black;
     font-family: var(--heading-font-family);
     font-weight: bold;
