--- a/styles/style.css
+++ b/styles/style.css
@@ -19,10 +19,16 @@ font-family: 'Poppins', sans-serif;*/
   
   h1 {
     font-size: 96px;
+    line-height: 1.5;
+  }
+  h2 {
+    font-size: 64px;
   }
   
   p {
     font-weight: normal;
+    font-size: 16px;
+    line-height: 30px;
   }
   
   .hero {
@@ -41,7 +47,7 @@ font-family: 'Poppins', sans-serif;*/
   .hero h2 {
     font-family: var(--heading-font-family);
     font-weight: normal;
-    line-height: 2;
+    line-height: 1.5;
     font-size: 24px;
   }
   
@@ -57,3 +63,35 @@ font-family: 'Poppins', sans-serif;*/
     color: #272142;
     background: var(--branding-color);
   }
+  .btn-branding-outline {
+    color: var(--branding-color);
+    border: 1px solid var(--branding-color);
+    border-radius: 4px;
+    font-size: 18px;
+    line-height: 27px;
+    padding: 15px 30px;
+  }
+  
+  .project-desciption {
+    padding: 120px 60px;
+  }
+
+  @media (max-width: 900px) {
+    h1 {
+      font-size: 44px;
+      line-height: 2;
+    }
+  
+    h2 {
+      font-size: 44px;
+    }
+  
+    .hero {
+      padding: 80px 20px;
+    }
+  
+    .project-desciption {
+      padding: 0;
+      text-align: center;
+    }
+}
