--- a/styles/style.css
+++ b/styles/style.css
@@ -89,6 +89,14 @@ font-family: 'Poppins', sans-serif;*/
   .about-section h2{
     font-size: 18px;
   }
+  .about-section h3{
+    font-size: 24px;
+    font-family: var(--default-font-family);
+    line-height: 1.5;
+  }
+  .about-section p{
+    font-size: 14px;
+  }
 
   @media (max-width: 900px) {
     h1 {
