--- a/styles/style.css
+++ b/styles/style.css
@@ -97,6 +97,30 @@ font-family: 'Poppins', sans-serif;*/
   .about-section p{
     font-size: 14px;
   }
+  .logo{
+    max-height: 40px;
+  }
+  nav{
+    padding: 20px 0;
+  }
+  nav ul{
+    padding: 0;
+    margin: 0;
+  }
+  nav li{
+    display: inline;
+    list-style-type: none;
+    line-height: 42px;
+    margin-left: 15px;
+  }
+  nav a{
+    color: #272142;
+    text-decoration: none;
+    transition: all 100ms ease-in-out;
+  }
+  nav a:hover, nav a.active{
+    color: var(--branding-color);
+  }
 
   @media (max-width: 900px) {
     h1 {
