--- a/styles/style.css
+++ b/styles/style.css
@@ -122,6 +122,39 @@ font-family: 'Poppins', sans-serif;*/
     color: var(--branding-color);
   }
 
+  footer{
+    margin-top: 50px;
+  }
+  footer p{
+    margin: 0;
+  }
+  .contact-box{
+    background: var(--secondary-color);
+    padding: 30px 120px;
+    border-radius:10px;
+  }
+  footer .email{
+    color: #000;
+    font-size: 24px;
+    text-decoration: none;
+  }
+  footer .email:hover{
+    color: var(--branding-color);
+  }
+  footer .social-links a{
+    color: var(--branding-color);
+    font-weight: 18px;
+    margin: 0 20px;
+    background: var(--secondary-color);
+    padding: 10px 15px;
+    border-radius: 50%;
+    transition: all 100ms ease-in-out;
+  }
+  footer .social-links a:hover{
+    color: #fff;
+    background: var(--branding-color);
+  }
+
   @media (max-width: 900px) {
     h1 {
       font-size: 44px;
