--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,7 @@ font-family: 'Poppins', sans-serif;*/
   .hero {
     background: var(--secondary-color);
     text-align: center;
-    padding: 160px 20px;
+    padding: 80px 20px;
   }
   
   .hero p {
@@ -123,7 +123,7 @@ font-family: 'Poppins', sans-serif;*/
   }
 
   footer{
-    margin-top: 50px;
+    margin: 50px 0;
   }
   footer p{
     margin: 0;
